--- a/indexMain.html
+++ b/indexMain.html
@@ -29,7 +29,7 @@
                 <div class="row">
                     <div class="col-sm-1">
                         <div class="home-button float-left">
-                            <a href="index2.html" class="navbar-brand"><img src="imagenes/logo.png" style="width: 50px;"></a>
+                            <a href="indexMain.html" class="navbar-brand"><img src="imagenes/logo.png" style="width: 50px;"></a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#uno"
                                 aria-controls="navbarSupportedContent" aria-expanded="false"
                                 aria-label="Toggle navigation">
@@ -59,9 +59,9 @@
                     <div class="col-sm-5">
                         <div class="search float-right">
                             <form class="form-inline my-2 my-lg-0" method="POST" action="registrado.html" id="mySearchId"
-                            onsubmit="return SearchValidate()" name="mySearch">
+                            onsubmit="return searchValidate()" name="mySearch">
                                 <input class="form-control mr-sm-2" type="search" placeholder="Search"
-                                    aria-label="Search" id="searchfield" name= "searchfield">
+                                    aria-label="Search" id="searchfield" name="searchfield">
                                     <div class="invalid-feedback" id="errorSearch"></div>
                                 <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
                             </form>
