--- a/index-registration.html
+++ b/index-registration.html
@@ -30,7 +30,7 @@
                 <div class="row">
                     <div class="col-sm-1">
                         <div class="home-button float-left">
-                            <a href="index2.html" class="navbar-brand"><img src="imagenes/logo.png"
+                            <a href="indexMain.html" class="navbar-brand"><img src="imagenes/logo.png"
                                     style="width: 50px;"></a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#uno"
                                 aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -62,7 +62,7 @@
                     <div class="col-sm-5">
                         <div class="search float-right">
                             <form class="form-inline my-2 my-lg-0" method="POST" action="registrado.html" id="mySearchId"
-                            onsubmit="return SearchValidate()" name="mySearch">
+                            onsubmit="return searchValidate()" name="mySearch">
                                 <input class="form-control mr-sm-2" type="search" placeholder="Search"
                                     aria-label="Search" id="searchfield" name= "searchfield">
                                     <div class="invalid-feedback" id="errorSearch"></div>
